| Bug #6391 | binlog-do-db rules ignored | ||
|---|---|---|---|
| Submitted: | 3 Nov 2004 0:19 | Modified: | 6 Dec 2004 12:44 |
| Reporter: | [ name withheld ] | ||
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 4.0.21 | OS: | FreeBSD (FreeBSD 4.10) |
| Assigned to: | Mats Kindahl | Target Version: | |
[3 Nov 2004 0:19]
[ name withheld ]
[3 Nov 2004 15:15]
Victoria Reznichenko
Verified with 4.0.23-debug-log
[6 Dec 2004 12:44]
Mats Kindahl
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
