Bug#6391 (binlog-do-db rules ignored)   CREATE DATABASE statement used the current database instead of the   database created when checking conditions for replication.   CREATE/DROP/ALTER DATABASE statements are now replicated based on   the manipulated database.